--- a/.drone.yml
+++ b/.drone.yml
@@ -5,8 +5,6 @@ steps:
 - name: build
   image: archlinux/base
   pull: always
-  environment:
-    MAKEFLAGS: -j14
   volumes:
     - name: build-products
       path: /tmp/products
@@ -18,7 +16,7 @@ steps:
     - printf 'builduser ALL=(ALL) ALL\n' | tee -a /etc/sudoers # passwordless sudo
     - chown -R builduser:builduser ./
     - sudo -u builduser gpg --recv-keys 38DBBDC86092693E
-    - sudo -u builduser makepkg -s --noconfirm
+    - sudo -u builduser bash -c 'export MAKEFLAGS=-j14 && makepkg -s --noconfirm'
     - cp *.pkg.* /tmp/products
 
 - name: publish-github
