--- a/.drone.yml
+++ b/.drone.yml
@@ -75,7 +75,7 @@ steps:
       from_secret: s3_bucket
   commands:
     - pacman --noconfirm -Syyu
-    - pacman --noconfirm -S pacman-tools s3cmd
+    - pacman --noconfirm --needed -S base s3cmd
     - s3cmd -s --region=${S3_REGION} --host=${S3_HOST} --host-bucket="${S3_BUCKET_HOST}" --access_key="${S3_ACCESS_ID}" --secret_key="${S3_SECRET}" sync --follow-symlinks s3://${S3_BUCKET}/archlinux/mbp/x86_64/ /tmp/repo/
     - mv /tmp/products/* /tmp/repo/
     - cd /tmp/repo/
