--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,7 @@ steps:
     - sudo -u builduser gpg --keyserver hkp://keys.gnupg.net:80 --recv-keys 38DBBDC86092693E
     - sudo -u builduser bash -c 'export MAKEFLAGS=-j32 && makepkg -s --noconfirm'
     - ls -lah *.pkg.tar.zst
-    - cp *.pkg.tar.zst /tmp/products
+    - mv *.pkg.tar.zst /tmp/products
 
 - name: sign
   image: plugins/gpgsign
@@ -79,7 +79,7 @@ steps:
     - s3cmd -s --region=$S3_REGION --host=$S3_HOST --host-bucket="$S3_BUCKET_HOST" --access_key=$S3_ACCESS_ID --secret_key=$S3_SECRET sync --follow-symlinks s3://$S3_BUCKET/archlinux/mbp/x86_64/ /tmp/repo/
     - mv /tmp/products/* /tmp/repo/
     - cd /tmp/repo/
-    - repo-add -n -R -p $PWD/mbp.db.tar.gz *.pkg.tar.zst* *.pkg.tar.xz*
+    - repo-add -n -R -p $PWD/mbp.db.tar.gz *.pkg.tar.zst
     - s3cmd -s --region=$S3_REGION --host=$S3_HOST --host-bucket="$S3_BUCKET_HOST" --access_key=$S3_ACCESS_ID --secret_key=$S3_SECRET sync --follow-symlinks --delete-removed /tmp/repo/ s3://$S3_BUCKET/archlinux/mbp/x86_64/
   when:
     event: tag
