ci: use a pacman-static for libc/kernel issues

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,9 +9,10 @@ steps:
     - name: build-products
       path: /tmp/products
   commands:
-    - mkdir -p /var/lib/pacman # temporary workaround: https://bugs.archlinux.org/task/69563
-    - pacman --noconfirm -Syyu
-    - pacman --noconfirm --needed -S base-devel sudo
+    - curl --output /tmp/pacman-static https://pkgbuild.com/~eschwartz/repo/x86_64-extracted/pacman-static # Workaround https://bugs.archlinux.org/task/69563
+    - chmod +x /tmp/pacman-static
+    - /tmp/pacman-static --noconfirm -Syyu
+    - /tmp/pacman-static --noconfirm --needed -S base-devel sudo
     - useradd builduser -m
     - passwd -d builduser
     - echo "PKGEXT='.pkg.tar.zst'" | tee -a /etc/makepkg.conf
@@ -75,8 +76,8 @@ steps:
     S3_BUCKET:
       from_secret: s3_bucket
   commands:
-    - pacman --noconfirm -Syyu
-    - pacman --noconfirm --needed -S base s3cmd
+    - /tmp/pacman-static --noconfirm -Syyu
+    - /tmp/pacman-static --noconfirm --needed -S base s3cmd
     - s3cmd -s --region=$S3_REGION --host=$S3_HOST --host-bucket="$S3_BUCKET_HOST" --access_key=$S3_ACCESS_ID --secret_key=$S3_SECRET sync --follow-symlinks s3://$S3_BUCKET/archlinux/mbp/x86_64/ /tmp/repo/
     - mv /tmp/products/* /tmp/repo/
     - cd /tmp/repo/
