ci: glibc pkg path fixes

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
     - /tmp/pacman-static --noconfirm -Syy
     - curl --output /tmp/glibc-linux4-2.33-5-x86_64.pkg.tar.zst https://dl.t2linux.org/ci/glibc-linux4-2.33-5-x86_64.pkg.tar.zst
     - curl --output lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst https://dl.t2linux.org/ci/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
-    - /tmp/pacman-static --noconfirm -U glibc-linux4-2.33-5-x86_64.pkg.tar.zst lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
+    - /tmp/pacman-static --noconfirm -U /tmp/glibc-linux4-2.33-5-x86_64.pkg.tar.zst /tmp/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
     - pacman --noconfirm -Syu
     - pacman --noconfirm --needed -S base-devel sudo
     - useradd builduser -m
@@ -81,7 +81,7 @@ steps:
       from_secret: s3_bucket
   commands:
     - /tmp/pacman-static --noconfirm -Syy
-    - /tmp/pacman-static --noconfirm -U glibc-linux4-2.33-5-x86_64.pkg.tar.zst lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
+    - /tmp/pacman-static --noconfirm -U /tmp/glibc-linux4-2.33-5-x86_64.pkg.tar.zst /tmp/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
     - pacman --noconfirm -Syyu
     - pacman --noconfirm --needed -S base s3cmd
     - s3cmd -s --region=$S3_REGION --host=$S3_HOST --host-bucket="$S3_BUCKET_HOST" --access_key=$S3_ACCESS_ID --secret_key=$S3_SECRET sync --follow-symlinks s3://$S3_BUCKET/archlinux/mbp/x86_64/ /tmp/repo/
