--- a/.drone.yml
+++ b/.drone.yml
@@ -6,15 +6,17 @@ steps:
   image: archlinux
   pull: always
   volumes:
+    - name: arch-bootstrap
+      path: /tmp/bootstrap
     - name: build-products
       path: /tmp/products
   commands:
-    - curl --output /tmp/pacman-static https://pkgbuild.com/~eschwartz/repo/x86_64-extracted/pacman-static # Workaround https://bugs.archlinux.org/task/69563
-    - chmod +x /tmp/pacman-static
-    - /tmp/pacman-static --noconfirm -Syy
-    - curl --output /tmp/glibc-linux4-2.33-5-x86_64.pkg.tar.zst https://dl.t2linux.org/ci/glibc-linux4-2.33-5-x86_64.pkg.tar.zst
-    - curl --output /tmp/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst https://dl.t2linux.org/ci/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
-    - printf 'y\ny\n' | /tmp/pacman-static -U /tmp/glibc-linux4-2.33-5-x86_64.pkg.tar.zst /tmp/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
+    - curl --output /tmp/bootstrap/pacman-static https://pkgbuild.com/~eschwartz/repo/x86_64-extracted/pacman-static # Workaround https://bugs.archlinux.org/task/69563
+    - chmod +x /tmp/bootstrap/pacman-static
+    - /tmp/bootstrap/pacman-static --noconfirm -Syy
+    - curl --output /tmp/bootstrap/glibc-linux4-2.33-5-x86_64.pkg.tar.zst https://dl.t2linux.org/ci/glibc-linux4-2.33-5-x86_64.pkg.tar.zst
+    - curl --output /tmp/bootstrap/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst https://dl.t2linux.org/ci/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
+    - printf 'y\ny\n' | /tmp/bootstrap/pacman-static -U /tmp/bootstrap/glibc-linux4-2.33-5-x86_64.pkg.tar.zst /tmp/bootstrap/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
     - pacman --noconfirm -Syu
     - pacman --noconfirm --needed -S base-devel sudo
     - useradd builduser -m
@@ -62,6 +64,8 @@ steps:
   image: archlinux
   pull: always
   volumes:
+    - name: arch-bootstrap
+      path: /tmp/bootstrap
     - name: build-products
       path: /tmp/products
     - name: temp-repo
@@ -80,8 +84,8 @@ steps:
     S3_BUCKET:
       from_secret: s3_bucket
   commands:
-    - /tmp/pacman-static --noconfirm -Syy
-    - printf 'y\ny\n' | /tmp/pacman-static -U /tmp/glibc-linux4-2.33-5-x86_64.pkg.tar.zst /tmp/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
+    - /tmp/bootstrap/pacman-static --noconfirm -Syy
+    - printf 'y\ny\n' | /tmp/bootstrap/pacman-static -U /tmp/bootstrap/glibc-linux4-2.33-5-x86_64.pkg.tar.zst /tmp/bootstrap/lib32-glibc-linux4-2.33-5-x86_64.pkg.tar.zst
     - pacman --noconfirm -Syyu
     - pacman --noconfirm --needed -S base s3cmd
     - s3cmd -s --region=$S3_REGION --host=$S3_HOST --host-bucket="$S3_BUCKET_HOST" --access_key=$S3_ACCESS_ID --secret_key=$S3_SECRET sync --follow-symlinks s3://$S3_BUCKET/archlinux/mbp/x86_64/ /tmp/repo/
@@ -93,6 +97,8 @@ steps:
     event: tag
 
 volumes:
+- name: arch-bootstrap
+  temp: {}
 - name: build-products
   temp: {}
 - name: temp-repo
